--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+	  <title>CVView</title>
+	  <link rel="stylesheet" href="https://d3r3v3xnalu9ia.cloudfront.net/fedor/index.css">
+	  <style>
+		  html {
+			  font-family: sans-serif;
+		  }
+	  </style>
   </head>
   <body>
     <div id="root"></div>
