fedorify initial, amend to layout commit

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 		  }
 	  </style>
   </head>
-  <body>
+  <body class="fedor">
     <div id="root"></div>
     <!--
       This HTML file is a template.
